<resources>
    <string name="app_name">Location Capture Widget</string>
    <string name="WRN_NOT_GET_LOCATION">(Couldn\'t get the location. Make sure location is enabled on the device)</string>
    <string name="LBL_ADDRESS">You\nAre\nHere </string>
    <string name="MSG_TAP_ON_PIN">Tap on Pin to get Location</string>
    <string name="change_widget_layout">Change Widget Layout</string>
    <string name="version">Version : 1.0</string>
    <string name="about_us_title">About Us</string>
    <string name="info_blog">Blog : http://chirag-limbachiya.blogspot.in/</string>
    <string name="info_email">Email : limbachiya24@gmail.com</string>
    <string name="info_developer">Developer : Chirag Limbachiya</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="date_format">EEEE, MMMM dd</string>
</resources>
