<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.v7.cardview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:background="@drawable/background"
        android.support.v7.cardview:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background">

            <include
                android:id="@+id/include_widget"
                layout="@layout/include_widget"
                android:layout_width="@dimen/widget_width"
                android:layout_height="@dimen/widget_height"
                android:layout_below="@+id/text_preview"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/text_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_5"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="Widget Preview"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/off_white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- ###### Color Pallet Menu Design Starts Here ##### -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card_view">

        <com.google.android.gms.ads.AdView
            android:id="@+id/addView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_20"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"

            >
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>
    <com.sample.foo.simplewidget.ClipRevealFrame
        android:id="@+id/layout_about_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card_view"
        android:background="@color/tumblr_primary"
        android:visibility="invisible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_about_us_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="@dimen/padding_5"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/about_us_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/off_white" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30"
                android:background="#fff"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_about_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="@dimen/padding_5"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/info_developer"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/off_white" />

            <TextView
                android:id="@+id/text_about_info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_5"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="@dimen/padding_5"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/info_email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/off_white" />

            <TextView
                android:id="@+id/text_about_info3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_5"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="@dimen/padding_5"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/info_blog"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/off_white" />

            <TextView
                android:id="@+id/text_about_info4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_5"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="@dimen/padding_5"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/off_white" />
        </LinearLayout>


    </com.sample.foo.simplewidget.ClipRevealFrame>

    <com.sample.foo.simplewidget.ClipRevealFrame
        android:id="@+id/color_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card_view"
        android:background="@color/tumblr_primary"
        android:visibility="invisible">

        <com.ogaclejapan.arclayout.ArcLayout
            android:id="@id/color_arc_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_20"
            app:arc_axisRadius="@dimen/layout_child_offset_tumblr"
            app:arc_origin="center"
            app:arc_radius="@dimen/layout_radius_tumblr">

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/default_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/facebook_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/stumbledupon_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/yahoo_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/twitter_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/vine_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/snapchat_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/foursqure_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/whesphalt_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/whisteria_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

            <Button
                style="@style/Item.Tumblr"
                android:background="@drawable/orange_horizontal_gradient"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_shadow_white" />

        </com.ogaclejapan.arclayout.ArcLayout>

        <Button
            android:id="@+id/color_center_item"
            style="@style/Item.Tumblr"
            android:layout_gravity="center"
            android:background="@drawable/youtube_horizontal_gradient"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/text_shadow_white" />

    </com.sample.foo.simplewidget.ClipRevealFrame>


    <!-- ###### Share Menu Design Starts Here ##### -->

    <com.sample.foo.simplewidget.ClipRevealFrame
        android:id="@+id/share_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card_view"
        android:background="@color/tumblr_primary"
        android:visibility="invisible">

        <com.ogaclejapan.arclayout.ArcLayout
            android:id="@id/share_arc_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_20"
            app:arc_axisRadius="@dimen/layout_child_offset_tumblr"
            app:arc_origin="center"
            app:arc_radius="@dimen/layout_radius_tumblr">

            <ImageButton
                style="@style/Item.Tumblr"
                android:background="@drawable/facebook_horizontal_gradient"
                android:src="@drawable/facebook_white" />

            <ImageButton
                style="@style/Item.Tumblr"
                android:background="@drawable/twitter_horizontal_gradient"
                app:srcCompat="@drawable/twitter_white" />

            <ImageButton
                style="@style/Item.Tumblr"
                android:background="@drawable/default_horizontal_gradient"
                app:srcCompat="@drawable/whatsapp_white" />

        </com.ogaclejapan.arclayout.ArcLayout>

        <ImageButton
            android:id="@+id/share_center_item"
            style="@style/Item.Tumblr"
            android:layout_gravity="center"
            android:background="@drawable/youtube_horizontal_gradient"
            app:srcCompat="@drawable/email_white" />

    </com.sample.foo.simplewidget.ClipRevealFrame>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:layout_gravity="bottom"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_color_vector" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:src="@drawable/ic_info_vector" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_vector" />


    </LinearLayout>
    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/ic_color_palette" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/fab_color"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:src="@drawable/ic_share" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fab_color"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/fab_share"
        android:src="@drawable/ic_info_black" />-->

</RelativeLayout>